# PyWEB_homework_mod_2

./: Dockerfile  pyproject.toml  requirements.txt  setup.py  task.txt
assistant/: __main__.py  abstractclasses.py  notebook.py
